# BeagleBone-Game-Boy-Emulator

./: .gitignore  CMakeLists.txt  README.md  aarch64-toolchain.cmake
app/: CMakeLists.txt
app/include/: cpu.h  gb_types.h  gpu.h  memory.h  registers.h  rom.h  timers.h
app/src/: cpu.c  gpu.c  main.c  memory.c  registers.c  rom.c  timers.c
cmake/: aarch64-toolchain.cmake
docs/: dan-journal.txt
hal/: CMakeLists.txt
hal/include/: buttons.h  joystick.h
hal/include/hal/: decode.h  joystick.h  led.h  placeholder.h  spi_access.h
hal/src/: buttons.c  decode.c  joystick.c  led.c  placeholder.c  spi_access.c
rom/: test.gb
src/: cpu.h  input.c  input.h  main.cpp
tests/: CMakeLists.txt  bootloader_test.c  cpu_test.c  gpu_test.c  gpu_test_sdl2.c  test_emulator.sh
